syntax = "proto3";

package spec;

import "protobuf-ts.proto";
import "google/protobuf/wrappers.proto";


service RxjsStyleService {

    option (ts.client_style) = RX;

    rpc Unary (google.protobuf.StringValue) returns (google.protobuf.Int32Value);
    rpc ServerStream (google.protobuf.StringValue) returns (stream google.protobuf.Int32Value);
    rpc ClientStream (stream google.protobuf.StringValue) returns (google.protobuf.Int32Value);
    rpc Bidi (stream google.protobuf.StringValue) returns (stream google.protobuf.Int32Value);

}
